objects/Text_and_Disclosure__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_or_Currency__c</fullName>
        <label>Number or Currency</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Place_is_Used__c</fullName>
        <label>Place is Used</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Texts and Disclosures</relationshipLabel>
        <relationshipName>Texts_and_Disclosures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_and_Tier__c</fullName>
        <description>Program and Tier code for identifying urls</description>
        <label>Program and Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Texts and Disclosures</relationshipLabel>
        <relationshipName>Texts_and_Disclosures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <label>States</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Area__c</fullName>
        <label>Text Area</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <description>website url</description>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Text and Disclosure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reason__c</columns>
        <columns>Place_is_Used__c</columns>
        <columns>Active__c</columns>
        <columns>url__c</columns>
        <columns>Program_and_Tier__c</columns>
        <columns>Text_Area__c</columns>
        <columns>States__c</columns>
        <columns>Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>Member_Community_URLS</fullName>
        <columns>NAME</columns>
        <columns>Place_is_Used__c</columns>
        <columns>Program_and_Tier__c</columns>
        <columns>Reason__c</columns>
        <columns>States__c</columns>
        <columns>url__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Place_is_Used__c</field>
            <operation>equals</operation>
            <value>Member Community</value>
        </filters>
        <label>Member Community URLS</label>
    </listViews>
    <nameField>
        <label>Name Text</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Texts and Disclosures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>